# playwright-tests

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
tests/: test_e2e.py  test_example.py  test_setup_verify.py
